vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__null_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::null_statement, \"null;\")"
---
NullStatement
  Keyword(Null)
  SemiColon
