vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__procedure_call_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"foo(1, 2);\")"
---
ProcedureCallStatement
  Name
    NameDesignatorPrefix
      Identifier 'foo'
    ParenthesizedName
      LeftPar
      AssociationList
        AssociationElement
          ActualPart
            ActualPartExpression
              LiteralExpression
                AbstractLiteral '1'
        Comma
        AssociationElement
          ActualPart
            ActualPartExpression
              LiteralExpression
                AbstractLiteral '2'
      RightPar
  SemiColon
