vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__procedure_call_statement_no_args.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"foo;\")"
---
ProcedureCallStatement
  Name
    NameDesignatorPrefix
      Identifier 'foo'
  SemiColon
