vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__procedure_call_with_qualified_expression.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"foo(l, string'(\\\"L: \\\"));\")"
---
ProcedureCallStatement
  Name
    NameDesignatorPrefix
      Identifier 'foo'
    ParenthesizedName
      LeftPar
      AssociationList
        AssociationElement
          ActualPart
            ActualPartExpression
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'l'
        Comma
        AssociationElement
          ActualPart
            ActualPartExpression
              QualifiedExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'string'
                Tick
                ParenthesizedExpressionOrAggregate
                  LeftPar
                  ElementAssociationList
                    ElementAssociation
                      NameExpression
                        Name
                          NameDesignatorPrefix
                            StringLiteral '"L: "'
                  RightPar
      RightPar
  SemiColon
