vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__report_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::report_statement, \"report \\\"message\\\" severity error;\")"
---
ReportStatement
  Keyword(Report)
  NameExpression
    Name
      NameDesignatorPrefix
        StringLiteral '"message"'
  SeverityClause
    Keyword(Severity)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'error'
  SemiColon
