vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__return_statement_expression.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::return_statement, \"return 1 + 2;\")"
---
ReturnStatement
  Keyword(Return)
  BinaryExpression
    LiteralExpression
      AbstractLiteral '1'
    Plus
    LiteralExpression
      AbstractLiteral '2'
  SemiColon
