vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__selected_signal_force_assignment.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"\\\nwith x(0) + 1 select\n   foo(0) <= force bar(1,2) when 0|1,\n                       def when others;\")"
---
SelectedForceAssignment
  SelectedAssignmentPreamble
    Keyword(With)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'x'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '0'
            RightPar
      Plus
      LiteralExpression
        AbstractLiteral '1'
    Keyword(Select)
  NameTarget
    Name
      NameDesignatorPrefix
        Identifier 'foo'
      ParenthesizedName
        LeftPar
        AssociationList
          AssociationElement
            ActualPart
              ActualPartExpression
                LiteralExpression
                  AbstractLiteral '0'
        RightPar
  LTE
  Keyword(Force)
  SelectedExpressions
    SelectedExpressionItem
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'bar'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '1'
              Comma
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '2'
            RightPar
      Keyword(When)
      Choices
        ExpressionChoice
          LiteralExpression
            AbstractLiteral '0'
        Bar
        ExpressionChoice
          LiteralExpression
            AbstractLiteral '1'
    Comma
    SelectedExpressionItem
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'def'
      Keyword(When)
      Choices
        OthersChoice
          Keyword(Others)
  SemiColon
