vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__selected_variable_assignment.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"\\\nwith x(0) + 1 select\n   foo(0) := bar(1,2) when 0|1,\n             def when others;\n        \")"
---
SelectedVariableAssignment
  SelectedAssignmentPreamble
    Keyword(With)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'x'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '0'
            RightPar
      Plus
      LiteralExpression
        AbstractLiteral '1'
    Keyword(Select)
  NameTarget
    Name
      NameDesignatorPrefix
        Identifier 'foo'
      ParenthesizedName
        LeftPar
        AssociationList
          AssociationElement
            ActualPart
              ActualPartExpression
                LiteralExpression
                  AbstractLiteral '0'
        RightPar
  ColonEq
  SelectedExpressions
    SelectedExpressionItem
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'bar'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '1'
              Comma
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '2'
            RightPar
      Keyword(When)
      Choices
        ExpressionChoice
          LiteralExpression
            AbstractLiteral '0'
        Bar
        ExpressionChoice
          LiteralExpression
            AbstractLiteral '1'
    Comma
    SelectedExpressionItem
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'def'
      Keyword(When)
      Choices
        OthersChoice
          Keyword(Others)
  SemiColon
