vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__sequential_statement_lone_label.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
function f return integer is
begin
    p:
end;
        

== tree ==
SubprogramBody
  SubprogramBodyPreamble
    FunctionSpecification
      Keyword(Function)
      Identifier 'f'
      Keyword(Return)
      Name
        NameDesignatorPrefix
          Identifier 'integer'
    Keyword(Is)
  DeclarationStatementSeparator
    Keyword(Begin)
  SubprogramStatementPart
    StmtLabel
      Identifier 'p'
      Colon
  SubprogramBodyEpilogue
    Keyword(End)
    SemiColon

== diagnostics ==
3:7 expected 'wait', 'assert', 'report', 'if', 'case', 'for', 'loop', 'while', 'next', 'exit', 'return', 'null', 'with', Identifier, '(' or '<<'
